--- a/app/views/ordem_servicos/edit.html.erb
+++ b/app/views/ordem_servicos/edit.html.erb
@@ -1,3 +1,7 @@
-<h1>Editar Ordem de Serviço</h1>
+<!-- app/views/ordem_servicos/edit.html.erb -->
+
+<h1 class="mt-4 mb-3">Editar Ordem de Serviço</h1>
+
 <%= render 'form' %>
-<%= link_to 'Voltar', ordem_servicos_path %>
+
+<%= link_to 'Voltar', ordem_servicos_path, class: 'btn btn-secondary' %>
