--- a/app/views/ordem_servicos/_form.html.erb
+++ b/app/views/ordem_servicos/_form.html.erb
@@ -1,29 +1,33 @@
-<%= form_with(model: @ordem_servico, local: true) do |form| %>
-  <div class="field">
-    <%= form.label :veiculo_id, 'Veículo' %>
-    <%= form.collection_select :veiculo_id, @veiculos, :id, :modelo, prompt: 'Selecione um veículo' %>
+<div class="card col-6 mx-auto" >
+  <div class="card-body">
+    <%= form_with(model: @ordem_servico, local: true, html: {class: 'needs-validation', novalidate: true}) do |form| %>
+      <div class="mb-3">
+        <%= form.label :veiculo_id, 'Veículo', class: 'form-label' %>
+        <%= form.collection_select :veiculo_id, @veiculos, :id, :modelo, { prompt: 'Selecione um veículo', class: 'form-select' }, class: 'form-control' %>
+      </div>
+      <div class="mb-3">
+        <%= form.label :cliente_id, 'Cliente', class: 'form-label' %>
+        <%= form.collection_select :cliente_id, @clientes, :id, :nome, { prompt: 'Selecione um cliente', class: 'form-select' }, class: 'form-control' %>
+      </div>
+      <div class="mb-3">
+        <%= form.label :servico_id, 'Serviço', class: 'form-label' %>
+        <%= form.collection_select :servico_id, @servicos, :id, :nome, { prompt: 'Selecione um serviço', class: 'form-select' }, class: 'form-control' %>
+      </div>
+      <div class="mb-3">
+        <%= form.label :peca_id, 'Peça', class: 'form-label' %>
+        <%= form.collection_select :peca_id, @pecas, :id, :nome, { prompt: 'Selecione uma peça', class: 'form-select' }, class: 'form-control' %>
+      </div>
+      <div class="mb-3">
+        <%= form.label :equipe_id, 'Equipe', class: 'form-label' %>
+        <%= form.collection_select :equipe_id, @equipes, :id, :nome, { prompt: 'Selecione uma equipe', class: 'form-select' }, class: 'form-control' %>
+      </div>
+      <div class="mb-3">
+        <%= form.label :valor, 'Valor', class: 'form-label' %>
+        <%= form.text_field :valor, class: 'form-control' %>
+      </div>
+      <div class="mb-3">
+        <%= form.submit 'Submit', class: 'btn btn-primary' %>
+      </div>
+    <% end %>
   </div>
-  <div class="field">
-    <%= form.label :cliente_id, 'Cliente' %>
-    <%= form.collection_select :cliente_id, @clientes, :id, :nome, prompt: 'Selecione um cliente' %>
-  </div>
-  <div class="field">
-    <%= form.label :servico_id, 'Serviço' %>
-    <%= form.collection_select :servico_id, @servicos, :id, :nome, prompt: 'Selecione um serviço' %>
-  </div>
-  <div class="field">
-    <%= form.label :peca_id, 'Peça' %>
-    <%= form.collection_select :peca_id, @pecas, :id, :nome, prompt: 'Selecione uma peça' %>
-  </div>
-  <div class="field">
-    <%= form.label :equipe_id, 'Equipe' %>
-    <%= form.collection_select :equipe_id, @equipes, :id, :descricao, prompt: 'Selecione uma equipe' %>
-  </div>
-  <div class="field">
-    <%= form.label :valor, 'Valor' %>
-    <%= form.text_field :valor %>
-  </div>
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
