--- a/app/views/ordem_servicos/new.html.erb
+++ b/app/views/ordem_servicos/new.html.erb
@@ -1,7 +1,7 @@
 <!-- app/views/ordem_servicos/new.html.erb -->
 
-<h1>Nova Ordem de Serviço</h1>
+<h1 class="mt-4 mb-3">Nova Ordem de Serviço</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Voltar', ordem_servicos_path %>
+<%= link_to 'Voltar', ordem_servicos_path, class: 'btn btn-secondary' %>
