--- a/app/views/ordem_servicos/show.html.erb
+++ b/app/views/ordem_servicos/show.html.erb
@@ -1,8 +1,19 @@
-<h1>Ordem de Serviço</h1>
-<p><strong>Veículo:</strong> <%= @ordem_servico.veiculo.modelo %></p>
-<p><strong>Cliente:</strong> <%= @ordem_servico.cliente.nome %></p>
-<p><strong>Serviço:</strong> <%= @ordem_servico.servico.nome %></p>
-<p><strong>Peça:</strong> <%= @ordem_servico.peca.nome if @ordem_servico.peca %></p>
-<p><strong>Equipe:</strong> <%= @ordem_servico.equipe.descricao %></p>
-<p><strong>Valor:</strong> <%= number_to_currency(@ordem_servico.valor) %></p>
-<%= link_to 'Voltar', ordem_servicos_path %>
+<div class="container mt-4">
+  <h1 class="mb-4">Ordem de Serviço</h1>
+  <div class="card col-6 mx-auto">
+    <div class="card-body">
+      <p class="mb-1"><strong>Veículo:</strong> <%= @ordem_servico.veiculo.modelo %></p>
+      <p class="mb-1"><strong>Cliente:</strong> <%= @ordem_servico.cliente.nome %></p>
+      <p class="mb-1"><strong>Serviço:</strong> <%= @ordem_servico.servico.nome %></p>
+      <p class="mb-1"><strong>Peça:</strong> <%= @ordem_servico.peca.nome if @ordem_servico.peca %></p>
+      <p class="mb-1"><strong>Equipe:</strong> <%= @ordem_servico.equipe.descricao %></p>
+      <p class="mb-1"><strong>Valor:</strong> <%= number_to_currency(@ordem_servico.valor) %></p>
+      <%= link_to 'Voltar', ordem_servicos_path, class: 'btn btn-secondary mt-3' %>
+   
+
+
+
+
+    </div>
+  </div>
+</div>
