--- a/app/views/equipes/_equipe.html.erb
+++ b/app/views/equipes/_equipe.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="card mx-auto col-6">
     <div class="card-header">
-      <h5 class="card-title text-center">Equipe Details</h5>
+      <h5 class="card-title text-center">Detalhes da equipe</h5>
     </div>
     <div class="card-body">
       <div id="<%= dom_id equipe %>">
