--- a/app/views/equipes/index.html.erb
+++ b/app/views/equipes/index.html.erb
@@ -7,7 +7,7 @@
         <%= render equipe %>
         <p>
           <div class="text-center">
-            <%= link_to "Show this equipe", equipe, class: "btn btn-secondary", style: "margin-top: 10px;" %>
+            <%= link_to "Exibir", equipe, class: "btn btn-secondary", style: "margin-top: 10px;" %>
           </div>
         </p>
       <% end %>
@@ -17,6 +17,6 @@
   </div>
 
   <div class="text-center">
-    <%= link_to "New equipe", new_equipe_path, class: "btn btn-primary", style: "margin-top: 10px;" %>
+    <%= link_to "Nova equipe", new_equipe_path, class: "btn btn-primary", style: "margin-top: 10px;" %>
   </div>
 </div>
