--- a/app/views/mecanicos/edit.html.erb
+++ b/app/views/mecanicos/edit.html.erb
@@ -1,10 +1,10 @@
-<h1 class="text-center">Editing mecanico</h1>
+<h1 class="text-center">Editar mecanico</h1>
 
 <div class="mx-auto col-12">
   <%= render "form", mecanico: @mecanico %>
 
   <div class="text-center mt-3">
-    <%= link_to "Show this mecanico", @mecanico, class: "btn btn-secondary mx-2" %>
-    <%= link_to "Back to mecanicos", mecanicos_path, class: "btn btn-primary mx-2" %>
+    <%= link_to "exibir", @mecanico, class: "btn btn-secondary mx-2" %>
+    <%= link_to "voltar", mecanicos_path, class: "btn btn-primary mx-2" %>
   </div>
 </div>
