--- a/app/views/mecanicos/show.html.erb
+++ b/app/views/mecanicos/show.html.erb
@@ -4,11 +4,11 @@
 
     <%= render @mecanico %>
 
-    <div>
-      <%= link_to "Edit this mecanico", edit_mecanico_path(@mecanico), class: "btn btn-primary" %> |
-      <%= link_to "Back to mecanicos", mecanicos_path, class: "btn btn-secondary" %>
+    <div class="mt-3">
+      <%= link_to "editar", edit_mecanico_path(@mecanico), class: "btn btn-primary" %> |
+      <%= link_to "voltar ", mecanicos_path, class: "btn btn-secondary" %>
 
-      <%= button_to "Destroy this mecanico", @mecanico, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
+      <%= button_to "deletar", @mecanico, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger mt-3" %>
     </div>
   </div>
 </div>
