--- a/app/views/pecas/edit.html.erb
+++ b/app/views/pecas/edit.html.erb
@@ -1,11 +1,14 @@
-<h1>Editing peca</h1>
-
-<%= render 'form', peca: @peca %>
-
-
-<br>
-
-<div>
-  <%= link_to "Show this peca", @pecat %> |
-  <%= link_to "Back to pecas", pecas_path %>
-</div>
+  <div class="container mt-5">
+    <div class="card mx-auto col-8" >
+      <div class="card-header bg-primary text-white text-center">
+        <h1>Editar Peça</h1>
+      </div>
+      <div class="card-body">
+        <%= render 'form', peca: @peca %>
+      </div>
+      <div class="card-footer text-muted text-center">
+       
+        <a href="<%= pecas_path %>" class="btn btn-secondary">Voltar</a>
+      </div>
+    </div>
+  </div>
