--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -5,6 +5,6 @@
     <%= link_to "Editar", edit_cliente_path(@cliente), class: "btn btn-primary" %> |
     <%= link_to "Voltar", clientes_path, class: "btn btn-secondary" %>
 
-    <%= button_to "Deletar", @cliente, method: :delete, data: { confirm: "Tem certeza?" }, class: "btn btn-danger" %>
+    <%= button_to "Deletar", @cliente, method: :delete, data: { confirm: "Tem certeza?" }, class: "btn btn-danger mt" %>
   </div>
 </div>
