--- a/app/views/equipes/_form.html.erb
+++ b/app/views/equipes/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="card mx-auto col-6" >
     <div class="card-header">
-      <h5 class="card-title text-center">Equipe Form</h5>
+      <h5 class="card-title text-center">Formulário da equipe</h5>
     </div>
     <div class="card-body">
       <%= form_with(model: equipe, local: true) do |form| %>
