--- a/app/views/equipes/new.html.erb
+++ b/app/views/equipes/new.html.erb
@@ -1,9 +1,10 @@
-<h1>New equipe</h1>
+ <div class="container mt-5"> 
+ <div class="mx-auto text-center">
+    <h1>Nova Equipe</h1>
+  </div>
+    <%= render "form", equipe: @equipe, class: "mt-3 mb-3" %> 
 
-<%= render "form", equipe: @equipe %>
-
-<br>
-
-<div>
-  <%= link_to "Back to equipes", equipes_path %>
-</div>
+    <div class="text-center mb-3"> 
+      <%= link_to "Voltar", equipes_path, class: "btn btn-secondary mt-3" %>
+    </div>
+  </div>
