--- a/app/views/mecanicos/new.html.erb
+++ b/app/views/mecanicos/new.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="text-center">
-    <h1>New mecanico</h1>
+    <h1>novo mecanico</h1>
 
     <%= render "form", mecanico: @mecanico %>
 
     <br>
 
     <div>
-      <%= link_to "Back to mecanicos", mecanicos_path, class: "btn btn-secondary" %>
+      <%= link_to "voltar", mecanicos_path, class: "btn btn-secondary" %>
     </div>
   </div>
 </div>
