--- a/app/views/ordem_servicos/_form.html.erb
+++ b/app/views/ordem_servicos/_form.html.erb
@@ -1,33 +1,36 @@
-<div class="card col-6 mx-auto" >
-  <div class="card-body">
-    <%= form_with(model: @ordem_servico, local: true, html: {class: 'needs-validation', novalidate: true}) do |form| %>
-      <div class="mb-3">
-        <%= form.label :veiculo_id, 'Veículo', class: 'form-label' %>
-        <%= form.collection_select :veiculo_id, @veiculos, :id, :modelo, { prompt: 'Selecione um veículo', class: 'form-select' }, class: 'form-control' %>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-body">
+          <%= form_with(model: @ordem_servico, local: true, html: {class: 'needs-validation', novalidate: true}) do |form| %>
+            <div class="mb-3">
+              <%= form.label :veiculo_id, 'Veículo', class: 'form-label' %>
+              <%= form.collection_select :veiculo_id, @veiculos, :id, :modelo, { prompt: 'Selecione um veículo', class: 'form-select' }, class: 'form-control' %>
+            </div>
+            <div class="mb-3">
+              <%= form.label :cliente_id, 'Cliente', class: 'form-label' %>
+              <%= form.collection_select :cliente_id, @clientes, :id, :nome, { prompt: 'Selecione um cliente', class: 'form-select' }, class: 'form-control' %>
+            </div>
+            <div class="mb-3">
+              <%= form.label :servico_id, 'Serviço', class: 'form-label' %>
+              <%= form.collection_select :servico_id, @servicos, :id, :nome, { prompt: 'Selecione um serviço', class: 'form-select' }, class: 'form-control' %>
+            </div>
+            <div class="mb-3">
+              <%= form.label :peca_id, 'Peça', class: 'form-label' %>
+              <%= form.collection_select :peca_id, @pecas, :id, :nome, { prompt: 'Selecione uma peça', class: 'form-select' }, class: 'form-control', id: 'ordem_servico_peca_id' %>
+            </div>
+            <div class="mb-3">
+              <%= form.label :equipe_id, 'Equipe', class: 'form-label' %>
+              <%= form.collection_select :equipe_id, @equipes, :id, :nome, { prompt: 'Selecione uma equipe', class: 'form-select' }, class: 'form-control' %>
+            </div>
+
+            <div class="mb-3 text-center">
+              <%= form.submit 'Submit', class: 'btn btn-primary' %>
+            </div>
+          <% end %>
+        </div>
       </div>
-      <div class="mb-3">
-        <%= form.label :cliente_id, 'Cliente', class: 'form-label' %>
-        <%= form.collection_select :cliente_id, @clientes, :id, :nome, { prompt: 'Selecione um cliente', class: 'form-select' }, class: 'form-control' %>
-      </div>
-      <div class="mb-3">
-        <%= form.label :servico_id, 'Serviço', class: 'form-label' %>
-        <%= form.collection_select :servico_id, @servicos, :id, :nome, { prompt: 'Selecione um serviço', class: 'form-select' }, class: 'form-control' %>
-      </div>
-      <div class="mb-3">
-        <%= form.label :peca_id, 'Peça', class: 'form-label' %>
-        <%= form.collection_select :peca_id, @pecas, :id, :nome, { prompt: 'Selecione uma peça', class: 'form-select' }, class: 'form-control' %>
-      </div>
-      <div class="mb-3">
-        <%= form.label :equipe_id, 'Equipe', class: 'form-label' %>
-        <%= form.collection_select :equipe_id, @equipes, :id, :nome, { prompt: 'Selecione uma equipe', class: 'form-select' }, class: 'form-control' %>
-      </div>
-      <div class="mb-3">
-        <%= form.label :valor, 'Valor', class: 'form-label' %>
-        <%= form.text_field :valor, class: 'form-control' %>
-      </div>
-      <div class="mb-3">
-        <%= form.submit 'Submit', class: 'btn btn-primary' %>
-      </div>
-    <% end %>
+    </div>
   </div>
 </div>
