--- a/app/views/pecas/new.html.erb
+++ b/app/views/pecas/new.html.erb
@@ -1,9 +1,11 @@
-<h1>New peca</h1>
+  <div class="container mt-5">
+    <h1 class="text-center">Nova Peça</h1>
 
-<%= render "form", peca: @peca %>
+    <%= render "form", peca: @peca %>
 
-<br>
+    <br>
 
-<div>
-  <%= link_to "Back to pecas", pecas_path %>
-</div>
+    <div class="text-center">
+      <%= link_to "Voltar", pecas_path, class: "btn btn-secondary" %>
+    </div>
+  </div>
