--- a/app/views/pecas/show.html.erb
+++ b/app/views/pecas/show.html.erb
@@ -1,10 +1,18 @@
-<p style="color: green"><%= notice %></p>
 
-<%= render @peca %>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
 
-<div>
-  <%= link_to "Edit this peca", edit_peca_path(@peca) %> |
-  <%= link_to "Back to pecas", pecas_path %>
+      
 
-  <%= button_to "Destroy this peca", @peca, method: :delete %>
+      <%= render @peca %>
+
+      <div class="text-center mt-3">
+        <%= link_to "Editar", edit_peca_path(@peca), class: "btn btn-primary mr-2" %>
+        <%= link_to "Voltar", pecas_path, class: "btn btn-secondary mr-2" %>
+        <%= button_to "Excluir", @peca, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger mt-3" %>
+      </div>
+
+    </div>
+  </div>
 </div>
