--- a/app/views/servicos/_form.html.erb
+++ b/app/views/servicos/_form.html.erb
@@ -1,27 +1,39 @@
-<%= form_with(model: servico) do |form| %>
-  <% if servico.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(servico.errors.count, "error") %> prohibited this servico from being saved:</h2>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-8">
+      <div class="card">
+        <div class="card-body">
 
-      <ul>
-        <% servico.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+          <%= form_with(model: servico, class: "mt-3") do |form| %>
+            <% if servico.errors.any? %>
+              <div class="alert alert-danger">
+                <h2><%= pluralize(servico.errors.count, "error") %> prohibited this servico from being saved:</h2>
+
+                <ul>
+                  <% servico.errors.each do |error| %>
+                    <li><%= error.full_message %></li>
+                  <% end %>
+                </ul>
+              </div>
+            <% end %>
+
+            <div class="mb-3">
+              <%= form.label :nome, class: "form-label" %>
+              <%= form.text_field :nome, class: "form-control" %>
+            </div>
+
+            <div class="mb-3">
+              <%= form.label :valor, class: "form-label" %>
+              <%= form.text_field :valor, class: "form-control" %>
+            </div>
+
+           <div class="form-group mt-3 text-center"> 
+              <%= form.submit class: "btn btn-primary col-8" %>
+            </div>
+          <% end %>
+
+        </div>
+      </div>
     </div>
-  <% end %>
-
-  <div>
-    <%= form.label :nome, style: "display: block" %>
-    <%= form.text_field :nome %>
   </div>
-
-  <div>
-    <%= form.label :valor, style: "display: block" %>
-    <%= form.text_field :valor %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
