--- a/app/views/veiculos/_form.html.erb
+++ b/app/views/veiculos/_form.html.erb
@@ -1,39 +1,48 @@
-<%= form_with(model: veiculo) do |form| %>
-  <!-- Se houver erros, exiba uma mensagem -->
-  <% if veiculo.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(veiculo.errors.count, "error") %> prohibited this veiculo from being saved:</h2>
-      <ul>
-        <% veiculo.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+<div class="container mt-4">
+  <div class="card col-8 mx-auto">
+    <div class="card-header">
+      <h5 class="mb-0">Formulário de Veículo</h5>
     </div>
-  <% end %>
+    <div class="card-body">
+      <%= form_with(model: veiculo, class: "form") do |form| %>
+        <!-- Se houver erros, exiba uma mensagem -->
+        <% if veiculo.errors.any? %>
+          <div class="alert alert-danger">
+            <h2><%= pluralize(veiculo.errors.count, "error") %> prohibited this veiculo from being saved:</h2>
+            <ul>
+              <% veiculo.errors.each do |error| %>
+                <li><%= error.full_message %></li>
+              <% end %>
+            </ul>
+          </div>
+        <% end %>
 
-  <!-- Campos do formulário -->
-  <div>
-    <%= form.label :modelo, style: "display: block" %>
-    <%= form.text_field :modelo %>
-  </div>
+        <!-- Campos do formulário -->
+        <div class="form-group">
+          <%= form.label :modelo %>
+          <%= form.text_field :modelo, class: "form-control" %>
+        </div>
 
-  <div>
-    <%= form.label :placa, style: "display: block" %>
-    <%= form.text_field :placa %>
-  </div>
+        <div class="form-group">
+          <%= form.label :placa %>
+          <%= form.text_field :placa, class: "form-control" %>
+        </div>
 
-  <div>
-    <%= form.label :cor, style: "display: block" %>
-    <%= form.text_field :cor %>
+        <div class="form-group">
+          <%= form.label :cor %>
+          <%= form.text_field :cor, class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label :cliente_id %>
+          <%= form.collection_select(:cliente_id, @clientes, :id, :nome, { prompt: true }, { class: "form-control" }) %>
+        </div>
+
+        <!-- Botão de envio centralizado -->
+        <div class="form-group text-center mt-3">
+          <%= form.submit "Salvar", class: "btn btn-primary col-6" %>
+        </div>
+      <% end %>
+    </div>
   </div>
- <div class="field">
-  <%= form.label :cliente_id %>
-  <%= form.collection_select(:cliente_id, @clientes, :id, :nome, prompt: true) %>
 </div>
-
-
-  <!-- Botão de envio -->
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
