--- a/app/views/veiculos/index.html.erb
+++ b/app/views/veiculos/index.html.erb
@@ -1,14 +1,16 @@
-<p style="color: green"><%= notice %></p>
+<div class="container mt-4 text-center">
+  <p style="color: green; font-size: 18px;"><%= notice %></p>
 
-<h1>Veiculos</h1>
+  <h1 style="margin-bottom: 20px;">Veiculos</h1>
 
-<div id="veiculos">
-  <% @veiculos.each do |veiculo| %>
-    <%= render veiculo %>
-    <p>
-      <%= link_to "Show this veiculo", veiculo %>
-    </p>
-  <% end %>
+  <div id="veiculos">
+    <% @veiculos.each do |veiculo| %>
+      <%= render veiculo %>
+      <p class="mt-2">
+        <%= link_to "exibir", veiculo, class: "btn btn-primary" %>
+      </p>
+    <% end %>
+  </div>
+
+  <%= link_to "novo veiculo", new_veiculo_path, class: "btn btn-success mt-4" %>
 </div>
-
-<%= link_to "New veiculo", new_veiculo_path %>
