--- a/app/views/veiculos/new.html.erb
+++ b/app/views/veiculos/new.html.erb
@@ -1,9 +1,11 @@
-<h1>New veiculo</h1>
+<div class="container mt-4 mx-auto d-flex flex-column justify-content-center align-items-center">
+  <h1 class="mx-auto">Novo veiculo</h1>
 
-<%= render "form", veiculo: @veiculo %>
+  <%= render "form", veiculo: @veiculo %>
 
-<br>
+  <br>
 
-<div>
-  <%= link_to "Back to veiculos", veiculos_path %>
+  <div class="text-center">
+    <%= link_to "voltar", veiculos_path, class: "btn btn-secondary mx-auto" %>
+  </div>
 </div>
