--- a/app/views/clientes/_cliente.html.erb
+++ b/app/views/clientes/_cliente.html.erb
@@ -1,27 +1,32 @@
 <div id="<%= dom_id cliente %>" class="container mt-4">
-  <div class="card  mx-auto col-6">
-    <div class="card-body">
-      <h5 class="card-title">Informações do Cliente</h5>
+  <div class="table-responsive">
+    <table class="table table-bordered table-striped mx-auto col-6">
+      <thead class="thead-dark">
+        <tr>
+          <th colspan="2" class="text-center">Informações do Cliente</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="font-weight-bold">Nome:</td>
+          <td><%= cliente.nome %></td>
+        </tr>
 
-      <p class="card-text">
-        <strong>Nome:</strong>
-        <%= cliente.nome %>
-      </p>
+        <tr>
+          <td class="font-weight-bold">Telefone:</td>
+          <td><%= cliente.telefone %></td>
+        </tr>
 
-      <p class="card-text">
-        <strong>Telefone:</strong>
-        <%= cliente.telefone %>
-      </p>
+        <tr>
+          <td class="font-weight-bold">Cpf:</td>
+          <td><%= cliente.cpf %></td>
+        </tr>
 
-      <p class="card-text">
-        <strong>Cpf:</strong>
-        <%= cliente.cpf %>
-      </p>
-
-      <p class="card-text">
-        <strong>Rg:</strong>
-        <%= cliente.rg %>
-      </p>
-    </div>
+        <tr>
+          <td class="font-weight-bold">Rg:</td>
+          <td><%= cliente.rg %></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
