--- a/app/views/equipes/_equipe.html.erb
+++ b/app/views/equipes/_equipe.html.erb
@@ -1,29 +1,31 @@
 <div class="container mt-5">
-  <div class="card mx-auto col-6">
-    <div class="card-header">
-      <h5 class="card-title text-center">Detalhes da equipe</h5>
-    </div>
-    <div class="card-body">
-      <div id="<%= dom_id equipe %>">
-        <p>
-          <strong>Nome:</strong>
-          <%= equipe.nome %>
-        </p>
+  <div class="table-responsive">
+    <table class="table table-bordered mx-auto col-6">
+      <thead class="thead-dark">
+        <tr>
+          <th colspan="2" class="text-center">Detalhes da Equipe</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="font-weight-bold">Nome:</td>
+          <td><%= equipe.nome %></td>
+        </tr>
 
-        <p>
-          <strong>Mecânicos:</strong>
-          <ul>
+        <tr>
+          <td class="font-weight-bold">Mecânicos:</td>
+          <td>
             <% equipe.mecanicos.each do |mecanico| %>
-              <li><%= mecanico.nome %></li>
+              <p><%= mecanico.nome %></p>
             <% end %>
-          </ul>
-        </p>
+          </td>
+        </tr>
 
-        <p>
-          <strong>Descrição:</strong>
-          <%= equipe.descricao %>
-        </p>
-      </div>
-    </div>
+        <tr>
+          <td class="font-weight-bold">Descrição:</td>
+          <td><%= equipe.descricao %></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
