--- a/app/views/pecas/_peca.html.erb
+++ b/app/views/pecas/_peca.html.erb
@@ -1,23 +1,27 @@
 <div id="<%= dom_id peca %>" class="container mt-4">
-  <div class="card mx-auto col-6">
-    <div class="card-body">
-      <h5 class="card-title">Detalhes da Peça</h5>
+  <div class="table-responsive">
+    <table class="table table-bordered mx-auto col-6">
+      <thead class="thead-dark">
+        <tr>
+          <th colspan="2" class="text-center">Detalhes da Peça</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="font-weight-bold">Nome:</td>
+          <td><%= peca.nome %></td>
+        </tr>
 
-      <div class="mb-3">
-        <strong class="form-label">Nome:</strong>
-        <p class="form-control-static"><%= peca.nome %></p>
-      </div>
+        <tr>
+          <td class="font-weight-bold">Quantidade:</td>
+          <td><%= peca.quantidade %></td>
+        </tr>
 
-      <div class="mb-3">
-        <strong class="form-label">Quantidade:</strong>
-        <p class="form-control-static"><%= peca.quantidade %></p>
-      </div>
-
-      <div class="mb-3">
-        <strong class="form-label">Preço:</strong>
-        <p class="form-control-static"><%= peca.preco %></p>
-      </div>
-
-    </div>
+        <tr>
+          <td class="font-weight-bold">Preço por peça:</td>
+          <td><%= peca.preco %></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
