--- a/app/views/ordem_servicos/index.html.erb
+++ b/app/views/ordem_servicos/index.html.erb
@@ -4,7 +4,7 @@
     <thead class="table-dark">
       <tr>
         <th>Veículo</th>
-        <th>Cliente</th>
+        <th>Problema</th>
         <th>Serviço</th>
         <th>Peça</th>
         <th>Equipe</th>
@@ -16,7 +16,7 @@
       <% @ordem_servicos.each do |ordem_servico| %>
         <tr>
           <td><%= ordem_servico.veiculo.placa %></td>
-          <td><%= ordem_servico.cliente.nome %></td>
+          <td><%= ordem_servico.problema_veiculo %></td>
           <td><%= ordem_servico.servico.nome %></td>
           <td><%= ordem_servico.peca.nome if ordem_servico.peca %></td>
           <td><%= ordem_servico.equipe.descricao %></td>
