--- a/app/views/clientes/_cliente.html.erb
+++ b/app/views/clientes/_cliente.html.erb
@@ -1,32 +1,34 @@
-<div id="<%= dom_id cliente %>" class="container mt-4">
+<!-- /*_cliente.html.erb*/ -->
+<p style="color: green; text-align: center;"><%= notice %></p>
+
+<div id="clientes" class="container mt-4">
+
+ 
   <div class="table-responsive">
-    <table class="table table-bordered table-striped mx-auto col-6">
+    <table class="table table-bordered table-striped mx-auto col-8">
       <thead class="thead-dark">
         <tr>
-          <th colspan="2" class="text-center">Informações do Cliente</th>
+          <th>Nome</th>
+          <th>Telefone</th>
+          <th>CPF</th>
+          <th>RG</th>
+          <th>Ações</th>
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td class="font-weight-bold">Nome:</td>
-          <td><%= cliente.nome %></td>
-        </tr>
-
-        <tr>
-          <td class="font-weight-bold">Telefone:</td>
-          <td><%= cliente.telefone %></td>
-        </tr>
-
-        <tr>
-          <td class="font-weight-bold">Cpf:</td>
-          <td><%= cliente.cpf %></td>
-        </tr>
-
-        <tr>
-          <td class="font-weight-bold">Rg:</td>
-          <td><%= cliente.rg %></td>
-        </tr>
+        <% @clientes.each do |cliente| %>
+          <tr>
+            <td><%= cliente.nome %></td>
+            <td><%= cliente.telefone %></td>
+            <td><%= cliente.cpf %></td>
+            <td><%= cliente.rg %></td>
+            <td class="text-center">
+              <%= link_to "Exibir", cliente, class: "btn btn-primary" %>
+            </td>
+          </tr>
+        <% end %>
       </tbody>
     </table>
   </div>
 </div>
+
