--- a/app/views/clientes/new.html.erb
+++ b/app/views/clientes/new.html.erb
@@ -1,5 +1,5 @@
-
-<h1 class="text-center">New cliente</h1>
+<!-- /*_new.html.erb*/ -->
+<h1 class="text-center">Novo cliente</h1>
 
 <%= render "form", cliente: @cliente %>
 
