--- a/app/views/equipes/_equipe.html.erb
+++ b/app/views/equipes/_equipe.html.erb
@@ -1,31 +1,38 @@
 <div class="container mt-5">
-  <div class="table-responsive">
-    <table class="table table-bordered mx-auto col-6">
-      <thead class="thead-dark">
+  <table class="table table-bordered mx-auto">
+    <thead class="thead-dark">
+      <tr>
+        <th>Nome</th>
+        <th>Descrição</th>
+        <th>Mecânicos</th>
+        <th>Ações</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% if @equipes.present? %>
+        <% @equipes.each do |equipe| %>
+          <tr>
+            <td><%= equipe.nome %></td>
+            <td><%= equipe.descricao %></td>
+            <td>
+              <% if equipe.mecanicos.present? %>
+                <% equipe.mecanicos.each do |mecanico| %>
+                  <%= mecanico.nome %><br>
+                <% end %>
+              <% else %>
+                Nenhum mecânico encontrado
+              <% end %>
+            </td>
+            <td>
+              <%= link_to "Exibir", equipe, class: "btn btn-secondary" %>
+            </td>
+          </tr>
+        <% end %>
+      <% else %>
         <tr>
-          <th colspan="2" class="text-center">Detalhes da Equipe</th>
+          <td colspan="4" class="text-center">Nenhuma equipe encontrada.</td>
         </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td class="font-weight-bold">Nome:</td>
-          <td><%= equipe.nome %></td>
-        </tr>
-
-        <tr>
-          <td class="font-weight-bold">Mecânicos:</td>
-          <td>
-            <% equipe.mecanicos.each do |mecanico| %>
-              <p><%= mecanico.nome %></p>
-            <% end %>
-          </td>
-        </tr>
-
-        <tr>
-          <td class="font-weight-bold">Descrição:</td>
-          <td><%= equipe.descricao %></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+      <% end %>
+    </tbody>
+  </table>
 </div>
