--- a/app/views/equipes/index.html.erb
+++ b/app/views/equipes/index.html.erb
@@ -1,22 +1,18 @@
 <div>
   <h1 class="text-center">Equipes</h1>
-
+ <div class="text-center mt-3 mb-3">
+    <%= link_to "Nova equipe", new_equipe_path, class: "btn btn-primary" %>
+  </div>
   <div id="equipes">
     <% if @equipes.present? %>
       <% @equipes.each do |equipe| %>
         <%= render equipe %>
-        <p>
-          <div class="text-center">
-            <%= link_to "Exibir", equipe, class: "btn btn-secondary", style: "margin-top: 10px;" %>
-          </div>
-        </p>
+
       <% end %>
     <% else %>
       <p>No equipes found.</p>
     <% end %>
   </div>
 
-  <div class="text-center">
-    <%= link_to "Nova equipe", new_equipe_path, class: "btn btn-primary", style: "margin-top: 10px;" %>
-  </div>
+ 
 </div>
