--- a/app/views/ordem_servicos/show.html.erb
+++ b/app/views/ordem_servicos/show.html.erb
@@ -3,7 +3,8 @@
   <div class="card col-6 mx-auto">
     <div class="card-body">
       <p class="mb-1"><strong>Veículo:</strong> <%= @ordem_servico.veiculo.placa %></p>
-      <p class="mb-1"><strong>Cliente:</strong> <%= @ordem_servico.cliente.nome %></p>
+      <p class="mb-1"><strong>Problema do Veículo:</strong> <%= @ordem_servico.problema_veiculo %></p>
+
       <p class="mb-1"><strong>Serviço:</strong> <%= @ordem_servico.servico.nome %></p>
       <p class="mb-1"><strong>Peça:</strong> <%= @ordem_servico.peca.nome if @ordem_servico.peca %></p>
       <p class="mb-1"><strong>Equipe:</strong> <%= @ordem_servico.equipe.descricao %></p>
