--- a/app/views/pecas/index.html.erb
+++ b/app/views/pecas/index.html.erb
@@ -1,19 +1,16 @@
 <div class="container mt-5">
     <div class="text-center">
       <p style="color: green;"><%= notice %></p>
-      <h1>Pecas</h1>
-
+      <h1>Peças</h1>
+ <%= link_to "Nova Peca", new_peca_path, class: "btn btn-success mt-3" %>
       <div id="pecas">
   <% @pecas.each do |peca| %>
   <%= render peca %>
-  <p>
-    <%= link_to "exibir", peca, class: "btn btn-primary mt-3" %>
-  </p>
+  
+  
 <% end %>
 
 </div>
-
-      <%= link_to "Nova Peca", new_peca_path, class: "btn btn-success mt-3" %>
     </div>
   </div>
 
