--- a/app/views/servicos/_servico.html.erb
+++ b/app/views/servicos/_servico.html.erb
@@ -1,12 +1,27 @@
-<div id="<%= dom_id servico %>">
-  <p>
-    <strong>Nome:</strong>
-    <%= servico.nome %>
-  </p>
+<p style="color: green"><%= notice %></p>
 
-  <p>
-    <strong>Valor:</strong>
-    <%= servico.valor %>
-  </p>
+<div class="container mt-4">
 
+  <table class="table table-striped table-bordered">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Nome</th>
+        <th scope="col">Valor</th>
+        <th scope="col">Ações</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @servicos.each do |servico| %>
+        <tr>
+          <td><%= servico.nome %></td>
+          <td><%= servico.valor %></td>
+          <td>
+            <%= link_to "Exibir", servico_path(servico), class: "btn btn-primary" %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
+
+
