--- a/app/views/servicos/index.html.erb
+++ b/app/views/servicos/index.html.erb
@@ -1,18 +1,10 @@
 <p style="color: green"><%= notice %></p>
 
-<h1 class="text-center">Servicos</h1>
-
-<div id="servicos" class="container mt-4 ">
-  <% @servicos.each do |servico| %>
-    <div class="card col-8 mb-3 mx-auto">
-      <div class="card-body">
-        <h5 class="card-title">Nome: <%= servico.nome %></h5>
-        <p class="card-text">Valor: <%= servico.valor %></p>
-        <a href="<%= servico_path(servico) %>" class="btn btn-primary">Exibir</a>
-      </div>
-    </div>
-  <% end %>
+<h1 class="text-center">Serviços</h1>
+<div class="text-center mt-3 mb-3">
+  <%= link_to "Novo servico", new_servico_path, id: "new-servico-link", class: "btn btn-secondary" %>
 </div>
-<div class="text-center mt-3">
-<%= link_to "New servico", new_servico_path, id: "new-servico-link", class: "btn btn-secondary" %>
-</div>
+<% @servicos.each do |servico| %>
+  <%= render servico %>
+<% end %>
+       
