--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -6,7 +6,25 @@
  <div class="text-center mt-3 mb-3">
     <%= link_to "Novo Cliente", new_cliente_path, class: "btn btn-success" %>
   </div>
-<% @clientes.each do |cliente| %>
+  <div class="table-responsive">
+    <table class="table table-bordered table-striped mx-auto col-8">
+      <thead class="thead-dark">
+        <tr>
+          <th>Nome</th>
+          <th>Telefone</th>
+          <th>CPF</th>
+          <th>RG</th>
+          <th>Ações</th>
+        </tr>
+      </thead>
+      <tbody>
+       
+        <% @clientes.each do |cliente| %>
   <%= render cliente %>
 <% end %>
+
+  
+      </tbody>
+    </table>
+  </div>
 
