--- a/app/views/pecas/index.html.erb
+++ b/app/views/pecas/index.html.erb
@@ -3,6 +3,20 @@
       <p style="color: green;"><%= notice %></p>
       <h1>Peças</h1>
  <%= link_to "Nova Peca", new_peca_path, class: "btn btn-success mt-3" %>
+ <div class="container mt-4">
+
+  <div class="table-responsive">
+    <table class="table table-bordered mx-auto">
+      <thead class="thead-dark">
+        <tr>
+          <th>Nome</th>
+          <th>Quantidade</th>
+          <th>Preço por Peça</th>
+          <th>Ações</th>
+        </tr>
+      </thead>
+      <tbody>
+      
       <div id="pecas">
   <% @pecas.each do |peca| %>
   <%= render peca %>
@@ -11,6 +25,11 @@
 <% end %>
 
 </div>
+   </tbody>
+    </table>
+  </div>
+</div>
+
     </div>
   </div>
 
