--- a/app/views/servicos/index.html.erb
+++ b/app/views/servicos/index.html.erb
@@ -4,7 +4,24 @@
 <div class="text-center mt-3 mb-3">
   <%= link_to "Novo servico", new_servico_path, id: "new-servico-link", class: "btn btn-secondary" %>
 </div>
+<p style="color: green"><%= notice %></p>
+
+<div class="container mt-4">
+
+  <table class="table table-striped table-bordered">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Nome</th>
+        <th scope="col">Valor</th>
+        <th scope="col">Ações</th>
+      </tr>
+    </thead>
+    <tbody>
 <% @servicos.each do |servico| %>
   <%= render servico %>
 <% end %>
-       
+          </tbody>
+  </table>
+</div>
+
+
