--- a/app/views/veiculos/index.html.erb
+++ b/app/views/veiculos/index.html.erb
@@ -2,10 +2,29 @@
   <p style="color: green; font-size: 18px;"><%= notice %></p>
 
   <h1 style="margin-bottom: 20px;">Veiculos</h1>
+ <%= link_to "novo veiculo", new_veiculo_path, class: "btn btn-success mt-4" %>
+<div class="container mt-4">
 
+  <table class="table table-striped table-bordered">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Modelo</th>
+        <th scope="col">Placa</th>
+        <th scope="col">Cor</th>
+        <th scope="col">Dono</th>
+        <th scope="col">Ações</th> <!-- Nova coluna para ações -->
+      </tr>
+    </thead>
+    <tbody>
   <div id="veiculos">
     <% @veiculos.each do |veiculo| %>
       <%= render veiculo %>
     <% end %>
-  </div>
+        </div>
+    </tbody>
+    
+  </table>
+  
+</div>
+ 
 </div>
