--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -1,11 +1,11 @@
 <!-- /*_index.html.erb*/ -->
-
+<div class="container mt-4 text-center">
 <p style="color: green; text-align: center;"><%= notice %></p>
 
 <h1 class="text-center">Clientes</h1>
- <div class="text-center mt-3 mb-3">
-    <%= link_to "Novo Cliente", new_cliente_path, class: "btn btn-success" %>
-  </div>
+
+    <%= link_to "Novo Cliente", new_cliente_path, class: "btn btn-success  mt-3 mb-3" %>
+ 
   <div class="table-responsive">
     <table class="table table-bordered table-striped mx-auto col-8">
       <thead class="thead-dark">
@@ -28,3 +28,4 @@
     </table>
   </div>
 
+</div>
