--- a/app/views/equipes/index.html.erb
+++ b/app/views/equipes/index.html.erb
@@ -1,9 +1,10 @@
+<div class="container mt-4 text-center">
 <div>
   <h1 class="text-center">Equipes</h1>
- <div class="text-center mt-3 mb-3">
-    <%= link_to "Nova equipe", new_equipe_path, class: "btn btn-primary" %>
-  </div>
-  <div class="container mt-5">
+
+    <%= link_to "Nova equipe", new_equipe_path, class: "btn btn-success  mt-3 mb-3" %>
+
+
   <table class="table table-bordered mx-auto">
     <thead class="thead-dark">
       <tr>
@@ -26,7 +27,8 @@
   </div>
  </tbody>
   </table>
-</div>
+
 
  
+</div>
 </div>
