--- a/app/views/mecanicos/index.html.erb
+++ b/app/views/mecanicos/index.html.erb
@@ -1,9 +1,10 @@
+<div class="container mt-4 text-center">
 <p class="text-center text-success"><%= notice %></p>
 
 <h1 class="text-center">Mecanicos</h1>
-<div class="text-center mt-3 mb-3">
-  <%= link_to "Novo Mecânico", new_mecanico_path, class: "btn btn-success" %>
-</div>
+
+  <%= link_to "Novo Mecânico", new_mecanico_path, class: "btn btn-success mt-3 mb-3" %>
+
 <table class="table table-bordered">
   <thead class="thead-dark">
     <tr>
@@ -22,3 +23,4 @@
 </div>
 </tbody>
 </table>
+</div>
